Changes for 2.4.7rc1

New features:

Bug fixes:
...G...... [ZBX-9721] fixed agent log message for log[] item in case of log records longer than 256kB (gleb)
..F....... [ZBX-9631] fixed "Undefined offset" in the actions conditions and lld rule filters when using a custom expression with more than 26 elements (Gunars, Sasha)
..F....... [ZBX-7492] fixed "Undefined index" when importing host without macros (Gunars)
....I....T [ZBX-8989] moved Total memory item from Filesystems to Memory application in Template OS Windows (gleb)
...G...... [ZBX-9739] fixed agent crash when active check fails without setting error message (wiper)

--------------------------------------------------------------------------------
Changes for 2.4.6

2.4.6rc1 was released as 2.4.6 without any changes

--------------------------------------------------------------------------------
Changes for 2.4.6rc1

New features:
A.F....... [ZBX-1357] enabled Czech locale to be displayed by default (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (Taiwan), Czech, Dutch, Japanese and Spanish translations; thanks to Zabbix translators (Richlv)
...G...PS. [ZBXNEXT-786] made net.tcp.service[ntp] item work over UDP (asaveljevs)

Bug fixes:
..F....... [ZBX-9375] fixed "Group" and "Host" dropdowns not setting values in "Events" page when navigating from trigger menu pop-up link and fixed availability reports filter dropdowns mistakenly using "Dropdown first entry" config (Ivo)
........S. [ZBX-9703] fixed a memory leak in SSH checks when configured public and/or private key is not a regular file (Sandis)
...G...... [ZBX-9605] fixed an issue with start lines and end lines in vfs.file.regexp[] and vfs.file.regmatch[] (Gleb)
..F....... [ZBX-9332] fixed correct display of green circle in maps and showing more unacknowledged problems than total number of problems (Ivo)