@@ -127,6 +127,7 @@ typedef struct
 	unsigned char	snmpv3_privprotocol;
 	unsigned char	inventory_link;
 	unsigned char	status;
+	unsigned char	unreachable;
 	char		key_orig[ITEM_KEY_LEN * 4 + 1], *key;
 	char		*formula;
 	char		*units;
