@@ -321,7 +321,7 @@ static int	host_get_availability(const DC_HOST *dc_host, unsigned char type, zbx
 	return SUCCEED;
 }
 
-static void	activate_host(DC_ITEM *item, zbx_timespec_t *ts)
+static void	activate_host(DC_ITEM *item, zbx_timespec_t *ts, int *available)
 {
 	const char		*__function_name = "activate_host";
 
@@ -349,11 +349,13 @@ static void	activate_host(DC_ITEM *item, zbx_timespec_t *ts)
 		zabbix_log(LOG_LEVEL_WARNING, "enabling %s checks on host \"%s\": host became available",
 				zbx_agent_type_string(item->type), item->host.host);
 	}
+
+	*available = HOST_AVAILABLE_TRUE;
 out:
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
 
-static void	deactivate_host(DC_ITEM *item, zbx_timespec_t *ts, const char *error)
+static void	deactivate_host(DC_ITEM *item, zbx_timespec_t *ts, int *available, const char *error)
 {
 	const char		*__function_name = "deactivate_host";
 
@@ -363,6 +365,11 @@ static void	deactivate_host(DC_ITEM *item, zbx_timespec_t *ts, const char *error
 			__function_name, item->host.hostid, item->itemid, (int)item->type);
 
 	if (FAIL == host_get_availability(&item->host, item->type, &in))
+		goto out;
+
+	/* if the item is still flagged as unreachable while the host is reachable, */
+	/* it means that this is item rather than network failure                   */
+	if (0 == in.errors_from && 0 != item->unreachable)
 		goto out;
 
 	if (FAIL == DChost_deactivate(ts, &in, &out))
@@ -403,6 +410,8 @@ static void	deactivate_host(DC_ITEM *item, zbx_timespec_t *ts, const char *error
 
 	zabbix_log(LOG_LEVEL_DEBUG, "%s() errors_from:%d available:%d", __function_name, out.errors_from,
 			out.available);
+
+	*available = HOST_AVAILABLE_FALSE;
 out:
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
@@ -663,19 +672,14 @@ static int	get_values(unsigned char poller_type)
 			case SUCCEED:
 			case NOTSUPPORTED:
 			case AGENT_ERROR:
+			case TIMEOUT_ERROR:
 				if (HOST_AVAILABLE_TRUE != last_available)
-				{
-					activate_host(&items[i], &timespec);
-					last_available = HOST_AVAILABLE_TRUE;
-				}
+					activate_host(&items[i], &timespec, &last_available);
 				break;
 			case NETWORK_ERROR:
 			case GATEWAY_ERROR:
 				if (HOST_AVAILABLE_FALSE != last_available)
-				{
-					deactivate_host(&items[i], &timespec, results[i].msg);
-					last_available = HOST_AVAILABLE_FALSE;
-				}
+					deactivate_host(&items[i], &timespec, &last_available, results[i].msg);
 				break;
 			case CONFIG_ERROR:
 				/* nothing to do */
@@ -715,7 +719,7 @@ static int	get_values(unsigned char poller_type)
 			}
 
 		}
-		else if (NOTSUPPORTED == errcodes[i] || AGENT_ERROR == errcodes[i] || CONFIG_ERROR == errcodes[i])
+		else if (HOST_AVAILABLE_FALSE != last_available)
 		{
 			items[i].state = ITEM_STATE_NOTSUPPORTED;
 			dc_add_history(items[i].itemid, items[i].value_type, items[i].flags, NULL, &timespec,
